# Cluster

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  generate.bat
.github/workflows/: windows-build.yml
assets/fonts/ForkAwesome/: LICENSE.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Cluster.cpp  Cluster.h  ClusteredRenderer.cpp  ClusteredRenderer.h  Config.cpp  Config.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  UI.cpp  UI.h  fs_cubes.sc  fs_forward.sc  fs_screen_quad.sc  fs_tonemap.sc  main.cpp  pbr_shader.sh  tonemapping.sh  varying.def.sc  vs_cubes.sc  vs_forward.sc  vs_screen_quad.sc  vs_tonemap.sc
src/Log/: AssimpSource.h  Log.cpp  Log.h  UISink.h
src/Renderer/: ClusterShader.cpp  ClusterShader.h  ClusteredRenderer.cpp  ClusteredRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  LightShader.cpp  LightShader.h  PBRShader.cpp  PBRShader.h  Renderer.cpp  Renderer.h  Samplers.h
src/Renderer/Shaders/: clusters.sh  colormap.sh  common.sh  cs_clustered_clusterbuilding.sc  cs_clustered_lightculling.sc  cs_clustered_reset_counter.sc  cs_multiple_scattering_lut.sc  fs_clustered.sc  fs_clustered_debug_vis.sc  fs_deferred.sc  fs_deferred_ambientlight.sc  fs_deferred_fullscreen.sc  fs_deferred_geometry.sc  fs_deferred_light.sc  fs_deferred_pointlight.sc  fs_forward.sc  fs_tonemap.sc  lights.sh  pbr.sh  samplers.sh  tonemapping.sh  util.sh  varying.def.sc  vs_clustered.sc  vs_deferred.sc  vs_deferred_fullscreen.sc  vs_deferred_geometry.sc  vs_deferred_light.sc  vs_forward.sc  vs_tonemap.sc
src/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  LightList.cpp  LightList.h  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
